Tests/errors/funcBeforeDef.scisl
call cool

def cool
	print "nothing"
endblock